<resources>
    <string name="app_name">TimnasSepakBola</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="title_main">Timnas Sepak Bola Senior</string>
    <string name="title_settings">Settings</string>
    <string name="security">Security &amp; Privacy</string>
    <string name="textSize">Text Size</string>
    <string name="language">Language</string>
    <string name="sendMessage">Send us a message</string>
    <string name="aboutUs">About Us</string>
    <string name="faqs">FAQs</string>
    <string name="title_about">About Me</string>
    <string name="nama">Ahmad Rohmin Dahuri</string>
    <string name="email">ahmaddahuri212@gmail.com</string>
    <string name="fullname">Nama Lengkap      :   </string>
    <string name="borndate">Tanggal Lahir     :  </string>
    <string name="bornplace">Tempat Lahir     :  </string>
    <string name="heightweight">Tinggi / Berat:  </string>
    <string name="club">Klub                  :  </string>
    <string name="position">Posisi            :  </string>
    <string name="back">Back Button</string>
    <string name="player_name">Nama Pemain</string>
    <string name="description">Deskripsi</string>
    <string-array name="data_name">
        
        <item>Shin Tae-Yong</item>
        <item>Nova Arianto</item>
        <item>Seo Jeong-Seok</item>

        
        <item>Nadeo Arga Winata</item>
        <item>Muhammad Riyandi</item>
        <item>Ernando Ari Sutaryadi</item>

        
        <item>Pratama Arhan</item>
        <item>Asnawi Mangkualam</item>
        <item>Edo Febriansyah</item>
        <item>Elkan Baggott</item>
        <item>Jordi Amat</item>
        <item>Rizky Ridho Ramadhani</item>
        <item>Sandy Walsh</item>
        <item>Shayne Pattynama</item>
        <item>Wahyu Prasetyo</item>

        
        <item>Adam Alis</item>
        <item>Yakob Sayuri</item>
        <item>Arkhan Fikri</item>
        <item>Egy Maulana Vikri</item>
        <item>Marc Klok</item>
        <item>Rachmat Irianto</item>
        <item>Ricky Kambuaya</item>
        <item>Saddil Ramdani</item>
        <item>Witan Sulaeman</item>
        <item>Marselino Ferdinan</item>

        
        <item>Dendy Sulistyawan</item>
        <item>Dimas Drajad</item>
        <item>Hokky Caraka</item>
        <item>Rafael Struick</item>
        <item>Ramadhan Sananta</item>
    </string-array>
</resources>