<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="700dp">

        <ImageView
            android:id="@+id/back_button_detail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back"
            android:padding="14dp"
            android:src="@drawable/back_black"
            app:layout_constraintBottom_toTopOf="@+id/img_item_photo"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_name"
            app:layout_constraintHorizontal_bias="0.388"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/back_button_detail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.001"
            tools:text="@string/player_name" />

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="140dp"
            android:layout_height="210dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_button_detail"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/player_name"/>

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.395"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_position"
            android:layout_marginVertical="30dp"
            tools:text="@string/description" />


        <TextView
            android:text="@string/fullname"
            android:id="@+id/tv_fullname"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_borndate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            android:layout_marginVertical="10sp"
            app:layout_constraintStart_toStartOf="@id/img_item_photo"
            app:layout_constraintTop_toTopOf="@id/tv_item_name" />

        <TextView
            android:text="@string/borndate"
            android:id="@+id/tv_borndate"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginVertical="10sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_bornplace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintStart_toStartOf="@id/img_item_photo"
            app:layout_constraintTop_toTopOf="@id/tv_fullname" />

        <TextView
            android:text="@string/bornplace"
            android:id="@+id/tv_bornplace"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginVertical="10sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_heightweight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintStart_toStartOf="@id/img_item_photo"
            app:layout_constraintTop_toTopOf="@id/tv_borndate" />

        <TextView
            android:text="@string/heightweight"
            android:id="@+id/tv_heightweight"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_club"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="@id/img_item_photo"
            app:layout_constraintTop_toTopOf="@id/tv_bornplace" />

        <TextView
            android:text="@string/club"
            android:id="@+id/tv_club"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_position"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="@id/img_item_photo"
            app:layout_constraintTop_toTopOf="@id/tv_heightweight" />

        <TextView
            android:text="@string/position"
            android:id="@+id/tv_position"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="@id/img_item_photo"
            app:layout_constraintTop_toTopOf="@id/tv_club" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>